Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1476

QMF - routing keys used for updates can't be used to discriminate by agent

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • M4
    • M4
    • QMF
    • None

    Description

      The routing keys for management updates have the form:

      console.obj.<package>.<class>.<agentInfo>

      but the <package> usually contains multiple words separated by dots. This means that the agentInfo is not in a consistent location. The structure needs to be changed to:

      console.obj.<agentInfo>.<package>.<class>

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: