QPID-1476 - routing keys used for updates can't be used to discriminate by agent - Fixed routing keys in agents and binding keys in consoles - Added some additional debug output for ManagementAgentImpl - Minor cleanup in the connection close path for ManagementAgentImpl

git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/qpid/trunk@719245 13f79535-47bb-0310-9956-ffa450edef68