ruby/lib/qpid/qmf.rb
@@ -217,7 +217,7 @@ module Qpid::Qmf
       @brokers.each do |broker|
         args = { :exchange => "qpid.management",
           :queue => broker.topicName,
-          :binding_key => "console.obj.#{package_name}.#" }
+          :binding_key => "console.obj.*.*.#{package_name}.#" }
         broker.amqpSession.exchange_bind(args)
       end
     end
@@ -230,7 +230,7 @@ module Qpid::Qmf
       @brokers.each do |broker|
         args = { :exchange => "qpid.management",
           :queue => broker.topicName,
-          :binding_key => "console.obj.#{pname}.#{cname}.#" }
+          :binding_key => "console.obj.*.*.#{pname}.#{cname}.#" }
         broker.amqpSession.exchange_bind(args)
       end
     end
@@ -637,7 +637,7 @@ module Qpid::Qmf
         if @rcv_objects && ! @user_bindings
           key_list << "console.obj.#"
         else
-          key_list << "console.obj.org.apache.qpid.broker.agent"
+          key_list << "console.obj.*.*.org.apache.qpid.broker.agent"
         end
         key_list << "console.event.#" if @rcv_events
         key_list << "console.heartbeat.#" if @rcv_heartbeats
